--- a/style.css
+++ b/style.css
@@ -138,6 +138,45 @@ p{
 #education-plan{
   background-color: #fff4d6;
 }
+.our-volunteers{
+  text-align: center;
+  margin-bottom: 150px;
+}
+.our-volunteers-container{
+  width: 1100px;
+}
+.all-volunteers{
+  display: flex;
+  gap: 35px;
+}
+.volunteer{
+  background-color: #ffffff;
+  padding: 25px 0;
+  border-radius: 5px;
+  box-shadow: 0 0 16px 2px #aaa;
+}
+.volunteer h3 {
+  margin: 5px;
+}
+.volunteer p{
+  color: #606060;
+  margin: 7px;
+}
+.volunteer img{
+  width: 60%;
+}
+.social-medias {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 15px;
+}
+.social-medias a{
+  text-decoration: none;
+}
+.social-medias img{
+  width: 35px;
+}
 .how-to-contribute-container{
   display: flex;
   width: 1100px;
